# navi

./: README.md  pyproject.toml
src/navi/: __init__.py  __main__.py  config.py  model.py  module.py
