[project]
name = "navi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SkuldNorniern", email = "skuldnorniern@gmail.com" }
]
dependencies = [
    "jax[cuda12]>=0.7.1",
    "numpy>=2.3.3",
    "tiktoken>=0.11.0",
    "flax>=0.11.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
navi = 'navi:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/navi"]
